# llm_sidechannels

./: .gitignore  README.md  pyproject.toml
analysis/: defense_comparison.csv  exp1_tpq_sweep_clean.csv  exp1_tpq_sweep_clean_bilstm.csv  exp1_tpq_sweep_clean_lgbm.csv  exp1_tpq_sweep_mid_test.csv  exp1_tpq_sweep_temp_0.3.csv  exp1_tpq_sweep_temp_0.6.csv  exp1_tpq_sweep_temp_0.8.csv  exp1_tpq_sweep_temp_1.0.csv  exp2_carlini_auprc.csv  exp3_mcdonald_imbalance.csv  exp3_mcdonald_summary.csv
attack/: bilstm.py  dataset.py  evaluate.py  gmm.py  train.py
collect/: capture.py  prompts.py  query.py  run.py
collect/data/: exp1_prompts.jsonl  exp3_target_prompts.jsonl
defend/: aggregate.py  cbr.py  pad.py
docs/: .exp1_runbook.md.swp  exp1_plan.md  exp1_runbook.md  paper_draft.md
features/: build.py  mcdonald.py  parse.py  timing.py
serve/: launch.py  nginx.conf  nginx_defend.conf
tests/: conftest.py  test_attack_dataset.py  test_attack_evaluate.py  test_attack_gmm.py  test_attack_train.py  test_collect_capture.py  test_collect_prompts.py  test_collect_query.py  test_collect_run.py  test_features_build.py  test_features_mcdonald.py  test_features_parse.py  test_features_timing.py  test_serve_launch.py
tools/: analyze_prompt_diversity.py  calibrate.sh  carlini_eval.py  compare_defenses.py  diagnose_traces.py  eval_defenses.sh  find_gguf_files.py  mcdonald_eval.py  plot_results.py  profile.py  run_profile.py  setup_once.sh  smoke_test.py  start_llama.sh  tpq_sweep.py
