[project]
name = "llm-sidechannels"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.6",
    "httpx>=0.27",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "lightgbm>=4.3",
    "aiohttp>=3.9",
    # torch is installed separately via the PyTorch CUDA index:
    #   uv pip install torch --index-url https://download.pytorch.org/whl/cu121
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["serve*", "collect*", "features*", "attack*", "defend*"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
